[Windows][General] Make OSD to be DLL. [Build][Windows] Adjust optimize parameters.

--- a/source/src/qt/CMakeLists.txt
+++ b/source/src/qt/CMakeLists.txt
@@ -21,32 +21,35 @@ SET(s_qt_osd_srcs
 )
 
 if(WIN32)
-add_library(qt_osd
-    ${s_qt_osd_srcs}
-    ${s_qt_osd_headers_MOC}
-    )
-#set_property(TARGET qt_osd PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
-#include (GenerateExportHeader)
-#  add_library(CSPosd SHARED
+#add_library(qt_osd
 #    ${s_qt_osd_srcs}
 #    ${s_qt_osd_headers_MOC}
-#  )
-#target_link_libraries(CSPosd PUBLIC
-#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPemu_utils/build-win32/qt/emuutils/libemu_utils.a
-#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPavio/build-win32/qt/avio/libqt_avio.a
-#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPosd/build-win32/qt/osd/libqt_osd.a
-#	  Qt5::Core
-#	  Qt5::Gui
-#	  Qt5::OpenGL
-#	  Qt5::Widgets
-#	  ${SDL2_LIBRARIES}
-#	  )
-#generate_export_header(CSPosd
-#       BASE_NAME CSPosd
-#       EXPORT_MACRO_NAME CSPosd_EXPORT
-#       EXPORT_FILE_NAME CSPosd_Export.h
-#       STATIC_DEFINE CSPgosd_BUILT_AS_STATIC
-#)
+#    )
+#set_property(TARGET qt_osd PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
+include (GenerateExportHeader)
+  add_library(CSPosd SHARED
+    ${s_qt_osd_srcs}
+    ${s_qt_osd_headers_MOC}
+  )
+target_link_libraries(CSPosd PUBLIC
+          ${CMAKE_SOURCE_DIR}/../../build-cmake/bin-win32/libCSPemu_utils.dll.a
+#          ${CMAKE_SOURCE_DIR}/../../build-cmake/bin-win32/libqt_avio.a
+	  Qt5::Core
+	  Qt5::Gui
+	  Qt5::OpenGL
+	  Qt5::Widgets
+	  ${SDL2_LIBRARIES}
+	  )
+generate_export_header(CSPosd
+       BASE_NAME CSPosd
+       EXPORT_MACRO_NAME CSPosd_EXPORT
+       EXPORT_FILE_NAME CSPosd_Export.h
+       STATIC_DEFINE CSPgosd_BUILT_AS_STATIC
+)
+  set_target_properties(CSPosd PROPERTIES 
+     SOVERSION 2.9.0
+     VERSION 2.9.0
+  )
 
 else()
   add_library(CSPosd SHARED
@@ -61,8 +64,8 @@ target_link_libraries(CSPosd PUBLIC
 	  )
   
   set_target_properties(CSPosd PROPERTIES 
-     SOVERSION 2.8.1
-     VERSION 2.8.1
+     SOVERSION 2.9.0
+     VERSION 2.9.0
   )
   INSTALL(TARGETS CSPosd DESTINATION ${LIBCSP_INSTALL_DIR})
 endif()
