--- a/source/build-cmake/mz2800/CMakeLists.txt
+++ b/source/build-cmake/mz2800/CMakeLists.txt
@@ -19,13 +19,14 @@ set(WITH_JOYSTICK ON)
 set(WITH_MOUSE ON) 
 
 set(VMFILES
+		   i8253.cpp
 		   mz1p17.cpp
 		   
 		   event.cpp
 		   io.cpp
 )
 set(VMFILES_LIB
-		   i8253.cpp
+#		   i8253.cpp
 		   i8255.cpp
 		   i8259.cpp
 		   rp5c01.cpp
