--- a/source/src/vm/pc9801/CMakeLists.txt
+++ b/source/src/vm/pc9801/CMakeLists.txt
@@ -21,8 +21,8 @@ elseif(BUILD_PC9801U)
 elseif(BUILD_PC9801VF) 
   add_library(vm_pc9801  ${BASIC_VM_FILES} )
 elseif(BUILD_PC9801VM) 
-#  add_library(vm_pc9801  ${BASIC_VM_FILES} itf.cpp)
-  add_library(vm_pc9801  ${BASIC_VM_FILES})
+  add_library(vm_pc9801  ${BASIC_VM_FILES} itf.cpp)
+#  add_library(vm_pc9801  ${BASIC_VM_FILES})
 elseif(BUILD_PC98DO) 
   add_library(vm_pc9801  ${BASIC_VM_FILES})
 endif()
