--- a/source/build-cmake/n5200/CMakeLists.txt
+++ b/source/build-cmake/n5200/CMakeLists.txt
@@ -24,6 +24,7 @@ set(WITH_MOUSE ON)
 set(VMFILES_BASE
 #                  i386.cpp
 		   i8237.cpp
+		   i8253.cpp
 		   upd7220.cpp
 		   
 		   io.cpp
@@ -33,7 +34,7 @@ set(VMFILES_LIB
 		   beep.cpp
 		   i8237_base.cpp
 		   i8251.cpp
-		   i8253.cpp
+#		   i8253.cpp
 		   i8255.cpp
 		   i8259.cpp
 		   upd1990a.cpp
