[Build]CMake] Fix CMakeLists.txt; BMJr, HC20, JR100 and JR800.

--- a/source/build-cmake/jr100/CMakeLists.txt
+++ b/source/build-cmake/jr100/CMakeLists.txt
@@ -22,13 +22,13 @@ set(WITH_JOYSTICK ON)
 set(WITH_MOUSE OFF)
 
 set(VMFILES_BASE
-		mc6800.cpp
 		sy6522.cpp
 
 		event.cpp
 )
 
 set(VMFILES_LIB 
+		mb8861.cpp
 		datarec.cpp
 		not.cpp
 		pcm1bit.cpp
