[VM][Qt] Add PC-9801RA, PC-9801VX, PC98RL, PC98XA and PC98XL. [UI][Qt] Update translates.

--- a/source/src/vm/pc9801/CMakeLists.txt
+++ b/source/src/vm/pc9801/CMakeLists.txt
@@ -20,11 +20,21 @@ elseif(BUILD_PC9801E)
   add_library(vm_pc9801  ${BASIC_VM_FILES} cmt.cpp )
 elseif(BUILD_PC9801U) 
   add_library(vm_pc9801  ${BASIC_VM_FILES} cmt.cpp )
+elseif(BUILD_PC9801RA) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp)
 elseif(BUILD_PC9801VF) 
   add_library(vm_pc9801  ${BASIC_VM_FILES} )
 elseif(BUILD_PC9801VM) 
   add_library(vm_pc9801  ${BASIC_VM_FILES} itf.cpp)
 #  add_library(vm_pc9801  ${BASIC_VM_FILES})
-elseif(BUILD_PC98DO) 
+elseif(BUILD_PC9801VX) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp)
+elseif(BUILD_PC98RL) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp)
+elseif(BUILD_PC98XL) 
+  add_library(vm_pc9801  ${BASIC_VM_FILES} cpureg.cpp)
+elseif(BUILD_PC98DO)
+    add_library(vm_pc9801  ${BASIC_VM_FILES})
+elseif(BUILD_PC98DOP) 
   add_library(vm_pc9801  ${BASIC_VM_FILES})
 endif()
