--- a/source/build-cmake/fm16pi/CMakeLists.txt
+++ b/source/build-cmake/fm16pi/CMakeLists.txt
@@ -30,16 +30,17 @@ set(VMFILES
 
 set(VMFILES_LIB
 #		   datarec.cpp
+		   disk.cpp
+		   i8251.cpp
 		   i8253.cpp
 		   i8255.cpp
 		   i8259.cpp
-		   ym2203.cpp
-		   msm58321_base.cpp
-		   pcm1bit.cpp
-		   i8251.cpp
-		   not.cpp
 		   mb8877.cpp
-		   disk.cpp
+		   msm58321_base.cpp
+		   noise.cpp
+		   not.cpp
+		   pcm1bit.cpp
+		   ym2203.cpp
 )
 
 set(FLAG_USE_I86 ON)
