--- a/source/build-cmake/hc80/CMakeLists.txt
+++ b/source/build-cmake/hc80/CMakeLists.txt
@@ -27,9 +27,10 @@ set(VMFILES_BASE
 )
 set(VMFILES_LIB
       beep.cpp
-      i8251.cpp
-      ptf20.cpp
       disk.cpp
+      i8251.cpp
+	  noise.cpp
+      ptf20.cpp
 )
 
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
