--- a/source/build-cmake/n5200/CMakeLists.txt
+++ b/source/build-cmake/n5200/CMakeLists.txt
@@ -36,6 +36,7 @@ set(VMFILES_LIB
 		   i8253.cpp
 		   i8255.cpp
 		   i8259.cpp
+		   noise.cpp
 		   upd1990a.cpp
 		   upd7220_base.cpp
 		   upd765a.cpp
