--- a/source/build-cmake/j3100sl/CMakeLists.txt
+++ b/source/build-cmake/j3100sl/CMakeLists.txt
@@ -26,13 +26,14 @@ set(VMFILES
 )
 
 set(VMFILES_LIB
+		   disk.cpp
+		   hd46505.cpp
 		   i8237_base.cpp
 		   i8253.cpp
 		   i8259.cpp
-		   hd46505.cpp
+		   noise.cpp
 		   pcm1bit.cpp
 		   upd765a.cpp
-		   disk.cpp
 )
 
 set(BUILD_J3100GT OFF  CACHE BOOL "Build emuJ3100GT")
