[Build][General] Update SOVERSION.

--- a/source/build-cmake/jx/CMakeLists.txt
+++ b/source/build-cmake/jx/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required (VERSION 2.8)
 cmake_policy(SET CMP0011 NEW)
 
 message("")
-message("** Start of configure CommonSourceProject,EPSON HC 80, Qt **")
+message("** Start of configure CommonSourceProject,IBM JX, Qt **")
 message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
