--- a/source/src/vm/jx/CMakeLists.txt
+++ b/source/src/vm/jx/CMakeLists.txt
@@ -8,6 +8,8 @@ set(BASIC_VM_FILES
 	   floppy.cpp
 	   keyboard.cpp
 	   speaker.cpp
+	   
+	   ./i286.cpp
 	   )
 
 add_library(vm_jx  ${BASIC_VM_FILES})
