--- a/source/build-cmake/j3100gt/CMakeLists.txt
+++ b/source/build-cmake/j3100gt/CMakeLists.txt
@@ -64,6 +64,9 @@ elseif(BUILD_J3100SL)
   set(EXEC_TARGET emuj3100sl)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/j3100sl.qrc)
   add_definitions(-D_J3100SL)
+  set(VMFILES ${VMFILES} 
+        i286.cpp 
+  )
   set(VMFILES_LIB ${VMFILES_LIB} 
 #               i86.cpp 
 	       rp5c01.cpp
@@ -73,6 +76,9 @@ elseif(BUILD_J3100SS)
   set(EXEC_TARGET emuj3100ss)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/j3100ss.qrc)
   add_definitions(-D_J3100SS)
+  set(VMFILES ${VMFILES} 
+        i286.cpp 
+  )
   set(VMFILES_LIB ${VMFILES_LIB} 
 #               i86.cpp 
 	       rp5c01.cpp
@@ -81,6 +87,9 @@ elseif(BUILD_J3100SE)
   set(EXEC_TARGET emuj3100se)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/j3100se.qrc)
   add_definitions(-D_J3100SE)
+  set(VMFILES ${VMFILES} 
+        i286.cpp 
+  )
   set(VMFILES_LIB ${VMFILES_LIB} 
 #               i86.cpp 
 	       rp5c01.cpp
