[VM][FM7] Add Japanese communication board (日本語通信カード) . [VM][FM7] Add turning ON/OFF Z80 extra board.

--- a/source/src/vm/fm7/CMakeLists.txt
+++ b/source/src/vm/fm7/CMakeLists.txt
@@ -22,7 +22,19 @@ set(VM_FM7_LIB_SRCS
 )
 
 if(BUILD_FM8)
-	set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} fm_bubblecasette.cpp)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} fm_bubblecasette.cpp)
+elseif(BUILD_FM7)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
+elseif(BUILD_FMNEW7)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
+elseif(BUILD_FM77)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
+elseif(BUILD_FM77L2)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
+elseif(BUILD_FM77L4)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
+elseif(BUILD_FM77AV)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
 endif()
 
 if(USE_DEVICES_SHARED_LIB)
@@ -31,6 +43,7 @@ else()
 	if(FM77AV_VARIANTS)
 		set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} mb61vh010.cpp)
 	endif()
+	  
 	if(BUILD_FM77AV20EX)
 		set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} 	hd6844.cpp)
 	elseif(BUILD_FM77AV40)
