[VM][FM8][MAINIO] Move FM-8 specified features to FM8_MAINIO:: . [VM][FM7][MAINIO][SOUND] Reduce hitting PCM1BIT:: when not sound buzzer.

--- a/source/src/vm/fm7/CMakeLists.txt
+++ b/source/src/vm/fm7/CMakeLists.txt
@@ -22,7 +22,7 @@ set(VM_FM7_LIB_SRCS
 )
 
 if(BUILD_FM8)
-  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} fm_bubblecasette.cpp)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} fm_bubblecasette.cpp fm8_mainio.cpp)
 elseif(BUILD_FM7)
   set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
 elseif(BUILD_FMNEW7)
