[VM][FM77] Add initial support of 2HD (for FM-77).

--- a/source/src/vm/fm7/CMakeLists.txt
+++ b/source/src/vm/fm7/CMakeLists.txt
@@ -28,11 +28,11 @@ elseif(BUILD_FM7)
 elseif(BUILD_FMNEW7)
   set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
 elseif(BUILD_FM77)
-  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp 	floppy_2HD.cpp)
 elseif(BUILD_FM77L2)
-  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp 	floppy_2HD.cpp)
 elseif(BUILD_FM77L4)
-  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
+  set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp 	floppy_2HD.cpp)
 elseif(BUILD_FM77AV)
   set(VM_FM7_LIB_SRCS ${VM_FM7_LIB_SRCS} jcommcard.cpp)
 endif()
